fix: update status card layout for improved readability and add vehicle counts

--- a/app/Dashboard/static/css/dashboard.css
+++ b/app/Dashboard/static/css/dashboard.css
@@ -120,6 +120,7 @@
   backdrop-filter: blur(10px);
   transition: background 0.5s ease;
   font-size: 12px;
+  font-weight: 500;
 }
 
 .dark-mode .datetime-container,
@@ -472,7 +473,7 @@ p {
 }
 
 .status-count {
-  font-size: 18px;
+  font-size: 26px;
   font-weight: bold;
   margin-top: 10px;
 }
